# BattleForMoscow

./: Cargo.toml  README.md  config.example.toml
backend/: Cargo.toml
backend/src/: hex.rs  main.rs  retreat.rs  unit.rs
bfm-project/: CONTENTS.md  MAPDATA.md  RULES.md  SPEC.md  UNITS.md
data/: map.json  units.json
mcp-bfm-player/: CONTENTS.md  NARRATOR_EXAMPLES.md
mcp-player/: Cargo.toml
mcp-player-spec/: CONTENTS.md  SPEC.md
mcp-player/src/: config.rs  main.rs
mcp-player/src/game/: client.rs  mod.rs  narrator.rs
mcp-player/src/mcp/: mod.rs  server.rs  tools.rs
mcp-player/src/text/: commands.rs  mod.rs  prompts.rs  repl.rs
src/: api.rs  combat.rs  game_state.rs  main.rs  map.rs  movement.rs  replacement.rs  zoc.rs
static/: game.js  hex.js  index.html  style.css
text-mode-spec/: CONTENTS.md  TEXT_MODE.md
